2.0.1: Últimos cambios antes de la entrega